force-app/main/default/objects/Account/fields/Demo_with_Bettina__c.field-meta.xml
<CustomField>
    <fullName>Demo_with_Bettina__c</fullName>
    <label>Demo with Bettina</label>
    <length>7</length>
    <type>Text</type>
</CustomField>