force-app/main/default/objects/Account/fields/Demo_with_Dave__c.field-meta.xml
<CustomField>
    <fullName>Demo_with_Dave__c</fullName>
    <label>Demo with Dave</label>
    <length>255</length>
    <type>Text</type>
</CustomField>