force-app/main/default/objects/Account/fields/Demo_with_Harry__c.field-meta.xml
<CustomField>
    <fullName>Demo_with_Harry__c</fullName>
    <label>Demo with Harry</label>
    <length>7</length>
    <type>Text</type>
</CustomField>