force-app/main/default/objects/Account/fields/Preferred_Office__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Office__c</fullName>
    <label>Preferred Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>